--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- 
+  The source code for this website is available at http://github.com/thewoolleyman/tucsonlocalcurrency.org
+-->
+
 <html>
 
 <head>
