--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   
   <ul>
     <li>Community. Our currency stays in Tucson and is re-invested in our community rather than ending up in another part of the world.</li>
-    <li>Sustainability. We promote products that are made or grown locally, that reuse and recyle existing materials, that rely on natural rather thanartificial components, and that minimize our overall carbon footprint.</li>
+    <li>Sustainability. We promote products that are made or grown locally, that reuse and recycle existing materials, that rely on natural rather than artificial components, and that minimize our overall carbon footprint.</li>
     <li>Opportunity. Our educational and promotional efforts encourage local entrepreneurs to offer products and services that are needed in our community and that allow these individuals to supplement their existing income. </li>
 
-    <li>Justice. We create a direct distribution system that allows venders, producers and service providers to receive fair compensation while providing their goods and services to local customers at reasonable prices.</li>
+    <li>Justice. We create a direct distribution system that allows vendors, producers and service providers to receive fair compensation while providing their goods and services to local customers at reasonable prices.</li>
     <li>Stability. By making sure that local suppliers are meeting as many local consumer needs as possible, we create a steady market for local goods and services that is relatively immune to fluctuations in the global economic system.</li>
     <li>Humane Commerce. By doing business with our local friends and neighbors,we foster an economic climate that is based on trust, integrity, kindness and compassion.</li>
     <li>Pride. We support each other in ways that build pride in ourselves and our community, and we invest our time, money and other resources into the improvement of our city and its neighborhoods.</li>
@@ -36,7 +36,6 @@
   <p>Here is a list of local groups whose members are involved in the <strong>Tucson Local Currency</strong> project:</p>
   <ul>
     <li><a href="http://www.proneighborhoods.org/" target="_blank">Act on Wisdom</a></li>
-
     <li><a href="http://www.dfatucson.com/" target="_blank">Democracy for America Tucson</a></li>
     <li><a href="http://www.pimadems.org/">Democratic Party of Pima County</a></li>
     <li><a href="http://pimagreens.org/" target="_blank">Green Party of Pima County</a></li>
